# quant_engine

./: .gitignore  CMakeLists.txt  README.md  __init__.py  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
.streamlit/: config.toml  secrets.toml.example
cpp_core/include/: HullWhiteProcess.hpp  LsmcEngine.hpp  QuasiMonteCarlo.hpp  StochasticProcess.hpp  YieldCurve.hpp
cpp_core/src/: HullWhiteProcess.cpp  LsmcEngine.cpp  QuasiMonteCarlo.cpp  YieldCurve.cpp  bindings.cpp
python_layer/: __init__.py  data_io.py  grpc_service.py  python_engine.py  ray_orchestrator.py  xlwings_udf.py
reports/: MANIFEST.json  PAPER.tex  README.md  REVIEW.md  SELF_ATTACK.md  VALIDATION.md  VALIDATION.tex  VERIFICATION.txt  WHITEPAPER.tex  numbers.json  review_aggregation.json  verify_numbers.py
research/: 01_quantlib_reconciliation.py  02_primal_dual_bounds.py  03_risk_suite_fred.py  04_parameter_estimation_fred.py  05_parameter_price_impact.py  06_curve_pca_fred.py  07_g2pp_decorrelation.py  08_g2pp_quantlib_validation.py  09_aad_greeks.py  10_aad_scaling.py  README.md
scripts/: codespaces_setup.sh
tests/: test_invariants.py
